Fixed local collector and net collectors Fixed main entry_point ( local running mode )

--- a/pq_checklist/pq_checklist.conf.template
+++ b/pq_checklist/pq_checklist.conf.template
@@ -3,6 +3,7 @@ url = <influxdb_url>
 token = <influxdb_token>
 org = <influxdb_org>
 bucket = <influxdb_bucket>
+dump_file = /tmp/influx_queries.json
 
 [ANSIBLE]
 host_target = <host target when running on ansible mode>
