fixed main entry-point name

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,4 +32,4 @@ build-backend = "setuptools.build_meta"
 
 [options.entry_points]
 console_scripts =
-    main = pq_checklist:main
+    pq_checklist = pq_checklist:main
