Several updates on collectors and fixed ansible mode Health check partially disabled ( in order to support multiple hosts ) Oracle collector non functional ( yet )

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -16,7 +16,7 @@ pipelining = True
 # some basic default values...
 
 #inventory      = /etc/ansible/hosts
-#library        = /usr/share/my_modules/
+library        = modules
 #module_utils   = /usr/share/my_module_utils/
 #remote_tmp     = ~/.ansible/tmp
 #local_tmp      = ~/.ansible/tmp
@@ -120,7 +120,7 @@ timeout = 5
 # use this shell for commands executed under sudo
 # you may need to change this to bin/bash in rare instances
 # if sudo is constrained
-#executable = /bin/sh
+executable = /bin/sh
 
 # if inventory variables overlap, does the higher precedence one win
 # or are hash values merged together?  The default is 'replace' but
