--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,9 @@ install_requires =
   influxdb_client
   xdg
 
+[options.extras_require]
+oracle_collector = cx_oracle
+
 [options.packages.find] #optional
 exclude=tests, sh
 build-backend = "setuptools.build_meta"
@@ -34,3 +37,6 @@ build-backend = "setuptools.build_meta"
 [options.entry_points]
 console_scripts =
     pq_checklist = pq_checklist:main
+
+
+cx_Oracle
