New ansible module fcstat_ansible Remove ansible references where it wasn't being used Added new oracle checks and fewer sql code within python

--- a/ansible/getperf.yml
+++ b/ansible/getperf.yml
@@ -55,6 +55,11 @@
       register: entstat
       poll: 02 
 
+    - name: fcstat
+      fcstat:
+      register: fcstat
+      poll: 02
+
     - name: uname_a
       command: uname -a
       poll: 02 
