--- a/ansible/getperf.yml
+++ b/ansible/getperf.yml
@@ -20,6 +20,16 @@
       register: smtctl_c
       when: bos_mp.stat.exists == True
 
+    - name: iostat_AIX
+      command: iostat -DRTl 1 2
+      register: iostat
+      when: bos_mp.stat.exists == True
+
+    - name: iostat_LINUX
+      command: iostat -d -k -N -p ALL -t -x -y  1 2
+      register: iostat
+      when: bos_mp.stat.exists != True
+
     - name: lsdev_class
       command: lsdev -C -H -S a -F name:class:subclass:type
       poll: 02
@@ -53,12 +63,14 @@
     - name: entstat
       entstat:
       register: entstat
-      poll: 02 
+      poll: 02
+      when: bos_mp.stat.exists == True
 
     - name: fcstat
       fcstat:
       register: fcstat
       poll: 02
+      when: bos_mp.stat.exists == True
 
     - name: uname_a
       command: uname -a
