Disabled Oracle collector by default, to avoid loading on non-oracle enabled scenarios

--- a/pq_checklist/pq_checklist.conf.template
+++ b/pq_checklist/pq_checklist.conf.template
@@ -21,7 +21,8 @@ mode = local
 # Possible values: True or False
 healthcheck = True
 # Checks to perform
-collectors = [ 'net', 'cpu', 'oracle', 'vio' ]
+# collectors = [ 'net', 'cpu', 'oracle', 'vio', 'dio' ]
+collectors = [ 'net', 'cpu', 'vio', 'dio' ]
 
 [LOOP]
 # Interval between the collections
