Split net_collector into multiple files for better management Added basic mem_collector to parse vmstat data Fixed influxdb database connectivity Offloaded functions from pq_checklist/__init__.py to individual files within utils directory for better management Added Custom monitor profiles from config file

--- a/ansible/getperf.yml
+++ b/ansible/getperf.yml
@@ -30,6 +30,16 @@
       register: iostat
       when: bos_mp.stat.exists != True
 
+    - name: vmstat_sSB
+      command: vmstat -sSB
+      register: vmstat_sSB
+      when: bos_mp.stat.exists != True
+
+    - name: vmstat_sv
+      command: vmstat -sv
+      register: vmstat_sv
+      when: bos_mp.stat.exists == True
+
     - name: lsdev_class
       command: lsdev -C -H -S a -F name:class:subclass:type
       poll: 02
@@ -88,6 +98,27 @@
       register: fcstat
       poll: 02
       when: bos_mp.stat.exists == True
+
+    - name: ioo
+      command: ioo -aF
+      register: ioo
+      when: bos_mp.stat.exists == True
+
+    - name: vmo
+      command: vmo -aF
+      register: vmo
+      when: bos_mp.stat.exists == True
+
+    - name: no
+      command: no -aF
+      register: no
+      when: bos_mp.stat.exists == True
+
+    - name: schedo
+      command: schedo -aF
+      register: schedo
+      when: bos_mp.stat.exists == True
+
   
     - name: uname_a
       command: uname -a
